cluster-critical/loki/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    annotations:
        traefik.ingress.kubernetes.io/router.entrypoints: websecure
        traefik.ingress.kubernetes.io/router.priority: "10"
        cert-manager.io/cluster-issuer: le-production
    labels:
        app: loki
    name: loki
    namespace: monitoring
spec:
    rules:
        - host: loki.local.eryx.pro
          http:
              paths:
                  - path: /ready
                    pathType: Prefix
                    backend:
                        service:
                            name: loki
                            port:
                                number: 3100
                  - path: /metrics
                    pathType: Prefix
                    backend:
                        service:
                            name: loki
                            port:
                                number: 3100
                  - path: /loki/api/v1
                    pathType: Prefix
                    backend:
                        service:
                            name: loki
                            port:
                                number: 3100
    tls:
        - secretName: eryx-pro-tls
          hosts: [loki.local.eryx.pro]
